// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListItem /> with additional className matches its snapshot 1`] = `
<li
  className="y-horizontalList--item TEST_CLASSNAME"
/>
`;

exports[`<ListItem /> with child content matches its snapshot 1`] = `
<li
  className="y-horizontalList--item"
>
  list item content
</li>
`;

exports[`<ListItem /> without props matches its snapshot 1`] = `
<li
  className="y-horizontalList--item"
/>
`;
